<resources>
    <string name="app_name">Carros</string>
    <!-- A -->
    <string name="action_about">Sobre</string>
    <string name="action_settings">Settings</string>
    <string name="action_editar">Editar</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_deletar">Deletar</string>
    <string name="about_dialog_text">

	</string>
    <string name="about_dialog_title">Livro Android</string>

    <!-- C -->
    <string name="criar_conta">Ainda não tem conta? Crie uma</string>
    <string name="carros">Carros</string>
    <string name="classicos">Clássicos</string>
    <string name="classico">Clássico</string>

    <!-- D -->
    <string name="descricao">Descrição</string>

    <!-- E -->
    <string name="esportivos">Esportivos</string>
    <string name="esportivo">Esportivo</string>

    <!-- F -->
    <string name="favoritos">Favoritos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- L -->
    <string name="login">Login</string>
    <string name="latitudeLongitude">Latitude / Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="luxo">Luxo</string>

    <!-- M -->
    <string name="mapa">Mapa</string>
    <string name="msg_sem_internet">Sem internet.</string>
    <string name="msg_aguarde">Por favor aguarde…</string>
    <string name="msg_carro_favoritado">Carro adicionado aos favoritado.</string>
    <string name="msg_carro_desfavoritado">Carro removido do favoritados.</string>
    <string name="msg_carro_salvo">Carro salvo com sucesso</string>
    <string name="msg_carro_deletado">Carro excluído com sucesso</string>
    <string name="msg_confirma_excluir_carro">Confirma excluir este carro?</string>
    <string name="msg_carro_excluido">Carro excluído com sucesso</string>
    <string name="msg_error_form_nome">Nome é obrigatório</string>
    <string name="msg_error_form_desc">Descrição é obrigatório</string>
    <string name="msg_confirma_logout">Deseja deslogar do aplicativo?</string>

    <string name="msg_error_form_email">E-Mail é obrigatório</string>
    <string name="msg_error_form_password">Senha é obrigatória</string>

    <!-- N -->
    <string name="nao">Não</string>
    <string name="nav_drawer_username">Ricardo Lecheta</string>
    <string name="nav_drawer_email">rlecheta@gmail.com</string>
    <string name="nome">Nome</string>
    <string name="novo_carro">Novo Carro</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!-- P -->
    <string name="email">E-Mail</string>
    <string name="password">Senha</string>
    <string name="btn_create_user">Criar usuário</string>

    <!-- S -->
    <string name="site_do_livro">Site do Livro</string>
    <string name="sim">Sim</string>
    <string name="sobre">Sobre</string>
    <string name="sair">Logout</string>

    <!-- U -->
    <string name="url_video">Vídeo</string>

    <!-- V -->
    <string name="vazio"/>
    <string name="video">Vídeo</string>

    <!-- T -->
    <string name="tipo">Tipo</string>
    <string name="ligarContato">Contato</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="nome_adriano">Adriano Ferreira Pinheiro - RM 330504</string>
    <string name="nome_artur">Artur Ramos Ribeiro do Valle- RM 331611</string>
    <string name="nome_kaique">Kaique da Costa Coqueiro - RM 331822</string>
    <string name="versao_app">Versão - 1.0</string>
    <string name="novo_usuario">Novo usuário</string>
    <string name="nome_daniel">Daniel Macena Ideriba - RM 330285</string>

    <!-- Toast msgs -->
    <string name="msg_success">Usuário criado com sucesso</string>
    <string name="msg_fail">Erro ao criar o Usuário</string>


</resources>