<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <!-- Lista com todos os carros -->
        <item
                android:id="@+id/nav_item_carros_todos"
                android:checked="true"
                android:icon="@drawable/ic_drawer_carro"
                android:title="@string/carros" />
        <!-- Lista com os carros clássicos -->
        <item
                android:id="@+id/nav_item_carros_classicos"
                android:checked="true"
                android:icon="@drawable/ic_drawer_carro"
                android:title="@string/classicos" />
        <!-- Lista com os carros esportivos -->
        <item
                android:id="@+id/nav_item_carros_esportivos"
                android:checked="true"
                android:icon="@drawable/ic_drawer_carro"
                android:title="@string/esportivos" />
        <!-- Lista com os carros de luxo -->
        <item
                android:id="@+id/nav_item_carros_luxo"
                android:checked="true"
                android:icon="@drawable/ic_drawer_carro"
                android:title="@string/luxo" />

        <item
                android:id="@+id/nav_item_ligar_contato"
                android:icon="@drawable/ic_call_black"
                android:title="@string/ligarContato" />

        <item
                android:id="@+id/nav_item_compartilhar"
                android:icon="@drawable/ic_share_black"
                android:title="@string/compartilhar" />

        <!-- Sobre -->
        <item
                android:id="@+id/nav_item_about"
                android:icon="@drawable/ic_interrogation"
                android:title="@string/sobre" />

        <item
                android:id="@+id/nav_item_exit"
                android:icon="@drawable/ic_exit_to_app_black"
                android:title="@string/sair" />
    </group>
</menu>